cloudformation/network.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: >
  GitOps CloudFormation Project Infrastructure


Parameters:

  InstanceType:

    Type: String

    Default: t3.micro


Mappings:

  RegionMap:

    us-east-1:

      AMI: ami-0c02fb55956c7d316

    us-west-2:

      AMI: ami-0c2d3e23c7f66b9e5

    ap-south-1:

      AMI: ami-0f58b397bc5c1f2e8


Resources:


  VPC:

    Type: AWS::EC2::VPC

    Properties:

      CidrBlock: 10.0.0.0/16

      EnableDnsSupport: true

      EnableDnsHostnames: true

      Tags:

        - Key: Name

          Value: gitops-vpc



  InternetGateway:

    Type: AWS::EC2::InternetGateway

    Properties:

      Tags:

        - Key: Name

          Value: gitops-igw



  AttachGateway:

    Type: AWS::EC2::VPCGatewayAttachment

    Properties:

      VpcId:

        Ref: VPC

      InternetGatewayId:

        Ref: InternetGateway



  PublicSubnet:

    Type: AWS::EC2::Subnet

    Properties:

      VpcId:

        Ref: VPC

      CidrBlock: 10.0.1.0/24

      MapPublicIpOnLaunch: true

      AvailabilityZone:

        Fn::Select:

          - 0

          - Fn::GetAZs:

              Ref: AWS::Region

      Tags:

        - Key: Name

          Value: gitops-public-subnet



  PrivateSubnet:

    Type: AWS::EC2::Subnet

    Properties:

      VpcId:

        Ref: VPC

      CidrBlock: 10.0.2.0/24

      AvailabilityZone:

        Fn::Select:

          - 1

          - Fn::GetAZs:

              Ref: AWS::Region

      Tags:

        - Key: Name

          Value: gitops-private-subnet



  PublicRouteTable:

    Type: AWS::EC2::RouteTable

    Properties:

      VpcId:

        Ref: VPC

      Tags:

        - Key: Name

          Value: gitops-public-route-table



  PublicRoute:

    Type: AWS::EC2::Route

    DependsOn:

      - AttachGateway

    Properties:

      RouteTableId:

        Ref: PublicRouteTable

      DestinationCidrBlock: 0.0.0.0/0

      GatewayId:

        Ref: InternetGateway



  PublicSubnetRouteAssociation:

    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:

      SubnetId:

        Ref: PublicSubnet

      RouteTableId:

        Ref: PublicRouteTable



  WebSecurityGroup:

    Type: AWS::EC2::SecurityGroup

    Properties:

      GroupDescription: Allow SSH and HTTP

      VpcId:

        Ref: VPC

      SecurityGroupIngress:

        - IpProtocol: tcp

          FromPort: 22

          ToPort: 22

          CidrIp: 0.0.0.0/0


        - IpProtocol: tcp

          FromPort: 80

          ToPort: 80

          CidrIp: 0.0.0.0/0



  EC2Role:

    Type: AWS::IAM::Role

    Properties:

      AssumeRolePolicyDocument:

        Version: '2012-10-17'

        Statement:

          - Effect: Allow

            Principal:

              Service:

                - ec2.amazonaws.com

            Action:

              - sts:AssumeRole


      ManagedPolicyArns:

        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore



  EC2InstanceProfile:

    Type: AWS::IAM::InstanceProfile

    Properties:

      Roles:

        - Ref: EC2Role



  WebServer:

    Type: AWS::EC2::Instance

    Properties:


      InstanceType:

        Ref: InstanceType


      ImageId:

        Fn::FindInMap:

          - RegionMap

          - Ref: AWS::Region

          - AMI


      NetworkInterfaces:

        - DeviceIndex: "0"

          AssociatePublicIpAddress: true

          SubnetId:

            Ref: PublicSubnet

          GroupSet:

            - Ref: WebSecurityGroup



      IamInstanceProfile:

        Ref: EC2InstanceProfile



      UserData:

        Fn::Base64: |

          #!/bin/bash

          yum update -y

          amazon-linux-extras enable nginx1

          yum clean metadata

          yum install nginx -y

          systemctl enable nginx

          systemctl start nginx

          echo "GitOps CloudFormation Project Running" > /usr/share/nginx/html/index.html



      Tags:

        - Key: Name

          Value: gitops-web-server



  ApplicationBucket:

    Type: AWS::S3::Bucket

    Properties:

      VersioningConfiguration:

        Status: Enabled

      Tags:

        - Key: Name

          Value: gitops-storage



  ApplicationLogGroup:

    Type: AWS::Logs::LogGroup

    Properties:

      RetentionInDays: 7



Outputs:


  VPCID:

    Description: VPC ID

    Value:

      Ref: VPC


  PublicSubnetID:

    Description: Public Subnet ID

    Value:

      Ref: PublicSubnet


  InstanceID:

    Description: Instance ID

    Value:

      Ref: WebServer


  WebsiteURL:

    Description: Website URL

    Value:

      Fn::Sub:

        - http://${PublicIP}

        - PublicIP:

            Fn::GetAtt:

              - WebServer

              - PublicIp
